Updated file extension validation